Half made signature for images

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -202,7 +202,10 @@
     "test":[
         "первое включение в сеть",
         "переходы",
+        "форсировка",
+        "форсировки",
         "гашение АГП",
+        "АГП",
         "гашение",
         "Разгрузка по Q",
         "НВ",
@@ -213,12 +216,118 @@
         "pss OFF",
         "pssON",
         "pssOFF",
+        "Q to 0",
         "ОМВ",
         "ОПР",
         "ОПВ",
         "ОПС",
         "ОМТР",
         "ОМТВВ",
-        "ОМНР"
-    ]
+        "ОМНР",
+        "LimCos"
+    ],
+
+    "replacements":{
+        "ECR" : "в режиме ручного регулирования",
+        "AVR" : "в режиме автоматического регулирования",
+        "CosPhi" : "в режиме регулирования CosPhi",
+        "Qg" : "в режиме регулирования CosPhi",
+
+        "ECR1-ECR2": "перехода ECR1 - ECR2",
+        "ECR2-ECR1": "перехода ECR2 - ECR1",
+        "AVR1-AVR2": "перехода AVR1 - AVR2",
+        "AVR2-AVR1": "перехода AVR2 - AVR1",
+
+        "AVR1-ECR1": "перехода AVR1 - ECR1",
+        "ECR1-AVR1": "перехода ECR1 - AVR1",
+        "AVR1-Qg1": "перехода AVR1 - Qg1",
+        "Qg1-AVR1": "перехода Qg1 - AVR1",
+        "ECR1-Qg1": "перехода ECR1 - Qg1",
+        "Qg1-ECR1": "перехода Qg1 - ECR1",
+        "CosPhi1-Qg1": "перехода CosPhi1 - Qg1",
+        "Qg1-CosPhi1": "перехода Qg1 - CosPhi1",
+        "AVR1-CosPhi1": "перехода AVR1 - CosPhi1",
+        "CosPhi1-AVR1": "перехода CosPhi1 - AVR1",
+        "ECR1-CosPhi1": "перехода ECR1 - CosPhi1",
+        "CosPhi1-ECR1": "перехода CosPhi1 - ECR1",
+
+        "AVR2-ECR2": "перехода AVR2 - ECR2",
+        "ECR2-AVR2": "перехода ECR2 - AVR2",
+        "AVR2-Qg2": "перехода AVR2 - Qg2",
+        "Qg2-AVR2": "перехода Qg2 - AVR2",
+        "ECR2-Qg2": "перехода ECR2 - Qg2",
+        "Qg2-ECR2": "перехода Qg2 - ECR2",
+        "CosPhi2-Qg2": "перехода CosPhi2 - Qg2",
+        "Qg2-CosPhi2": "перехода Qg2 - CosPhi2",
+        "AVR2-CosPhi2": "перехода AVR2 - CosPhi2",
+        "CosPhi2-AVR2": "перехода CosPhi2 - AVR2",
+        "ECR2-CosPhi2": "перехода ECR2 - CosPhi2",
+        "CosPhi2-ECR2": "перехода CosPhi2 - ECR2",
+
+        "ECR1 - ECR2": "перехода ECR1 - ECR2",
+        "ECR2 - ECR1": "перехода ECR2 - ECR1",
+        "AVR1 - AVR2": "перехода AVR1 - AVR2",
+        "AVR2 - AVR1": "перехода AVR2 - AVR1",
+
+        "AVR1 - ECR1": "перехода AVR1 - ECR1",
+        "ECR1 - AVR1": "перехода ECR1 - AVR1",
+        "AVR1 - Qg1": "перехода AVR1 - Qg1",
+        "Qg1 - AVR1": "перехода Qg1 - AVR1",
+        "ECR1 - Qg1": "перехода ECR1 - Qg1",
+        "Qg1 - ECR1": "перехода Qg1 - ECR1",
+        "CosPhi1 - Qg1": "перехода CosPhi1 - Qg1",
+        "Qg1  -CosPhi1": "перехода Qg1 - CosPhi1",
+        "AVR1 - CosPhi1": "перехода AVR1 - CosPhi1",
+        "CosPhi1 - AVR1": "перехода CosPhi1 - AVR1",
+        "ECR1 - CosPhi1": "перехода ECR1 - CosPhi1",
+        "CosPhi1 - ECR1": "перехода CosPhi1 - ECR1",
+
+        "AVR2 - ECR2": "перехода AVR2 - ECR2",
+        "ECR2 - AVR2": "перехода ECR2 - AVR2",
+        "AVR2 - Qg2": "перехода AVR2 - Qg2",
+        "Qg2 - AVR2": "перехода Qg2 - AVR2",
+        "ECR2 - Qg2": "перехода ECR2 - Qg2",
+        "Qg2 - ECR2": "перехода Qg2 - ECR2",
+        "CosPhi2 - Qg2": "перехода CosPhi2 - Qg2",
+        "Qg2 - CosPhi2": "перехода Qg2 - CosPhi2",
+        "AVR2 - CosPhi2": "перехода AVR2 - CosPhi2",
+        "CosPhi2 - AVR2": "перехода CosPhi2 - AVR2",
+        "ECR2 - CosPhi2": "перехода ECR2 - CosPhi2",
+        "CosPhi2 - ECR2": "перехода CosPhi2 - ECR2",
+
+        "Проверка устойчивости": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time}",
+
+        "форсировка": "", 
+        "форсировки": "",
+
+        "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {regulator}. В работе {channel} канал.",
+
+        "переходы": "Осциллограмма параметров системы возбуждения в процессе {regulator}.",
+
+        "первое включение в сеть":"",
+
+        "гашение АГП":"Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
+        "АГП":"Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
+
+        "гашение":"Осциллограмма параметров системы возбуждения в процессе гашения инвертированием {regulator}. В работе {channel} канал.",
+
+        "pss ON":"",
+        "pssON":"",
+        "Разгрузка по Q":"",
+        "V-Hz":"",
+        "cosPhi=1":"",
+        "pss OFF":"",
+        "pssOFF":"",
+        "Q to 0":"",
+        "ОМВ":"",
+        "ОПР":"",
+        "ОПВ":"",
+        "ОПС":"",
+        "ОМТР":"",
+        "ОМТВВ":"",
+        "ОМНР":"",
+        "LimCos":"",
+        "":""
+
+    }
 }
