Deleted comma after tunes

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -306,28 +306,32 @@
 
         "первое включение в сеть":"",
 
-        "гашение АГП":"Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
-        "АГП":"Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
+        "гашение АГП": "Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
+        "АГП": "Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
 
-        "гашение":"Осциллограмма параметров системы возбуждения в процессе гашения инвертированием {regulator}. В работе {channel} канал.",
+        "гашение": "Осциллограмма параметров системы возбуждения в процессе гашения инвертированием {regulator}. В работе {channel} канал.",
 
-        "pss ON":"",
-        "pssON":"",
-        "Разгрузка по Q":"",
-        "V-Hz":"",
-        "cosPhi=1":"",
-        "pss OFF":"",
-        "pssOFF":"",
-        "Q to 0":"",
-        "ОМВ":"",
-        "ОПР":"",
-        "ОПВ":"",
-        "ОПС":"",
-        "ОМТР":"",
-        "ОМТВВ":"",
-        "ОМНР":"",
-        "LimCos":"",
-        "":""
+        "pss ON": "",
+        "pssON": "",
+        "Разгрузка по Q": "",
+        "V-Hz": "",
+        "cosPhi=1": "",
+        "pss OFF": "",
+        "pssOFF": "",
+        "Q to 0": "",
+        "ОМВ": "",
+        "ОПР": "",
+        "ОПВ": "",
+        "ОПС": "",
+        "ОМТР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока ротора при сниженной уставке {tunes}. В работе {channel} канал",
+        
+        "ОМТВВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока возбуждения возбудителя при сниженной уставке {tunes}. В работе {channel} канал",
+
+        "ОМНР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального напряжения ротора при сниженной уставке {tunes}. В работе {channel} канал",
+
+        "LimCos": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля cosPhi при сниженной уставке {tunes}. В работе {channel} канал",
+
+        "": ""
 
     }
 }
