--- a/standard_settings.json
+++ b/standard_settings.json
@@ -201,13 +201,14 @@
 
     "test":[
         "первое включение в сеть",
+        "Синхронизац",
         "переходы",
-        "форсировка",
-        "форсировки",
+        "Форсировк",
         "гашение АГП",
         "АГП",
         "гашение",
         "Разгрузка по Q",
+        "Q to 0",
         "НВ",
         "HB",
         "pss ON",
@@ -216,7 +217,6 @@
         "pss OFF",
         "pssON",
         "pssOFF",
-        "Q to 0",
         "ОМВ",
         "ОПР",
         "ОПВ",
@@ -295,41 +295,47 @@
         "ECR2 - CosPhi2": "перехода ECR2 - CosPhi2",
         "CosPhi2 - ECR2": "перехода CosPhi2 - ECR2",
 
-        "Проверка устойчивости": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time}",
+        "Проверка устойчивости": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time}. В работе {channel} канал.",
 
-        "форсировка": "", 
-        "форсировки": "",
+        "Форсировк": "Осциллограмма параметров системы возбуждения в процессе форсировки {regulator}. В работе {channel} канал.", 
 
         "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {regulator}. В работе {channel} канал.",
 
         "переходы": "Осциллограмма параметров системы возбуждения в процессе {regulator}.",
 
-        "первое включение в сеть":"",
+        "первое включение в сеть":"Осциллограмма параметров системы возбуждения в процессе первого включения в сеть {regulator}. В работе {channel} канал.",
+
+        "Синхронизац": "Осциллограмма параметров системы возбуждения в процессе синхронизации с сетью {regulator}. В работе {channel} канал.",
 
         "гашение АГП": "Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
         "АГП": "Осциллограмма параметров системы возбуждения в процессе гашения отключением АГП. В работе {channel} канал.",
 
         "гашение": "Осциллограмма параметров системы возбуждения в процессе гашения инвертированием {regulator}. В работе {channel} канал.",
 
-        "pss ON": "",
-        "pssON": "",
+        "pss ON": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time} с включенным системным стабилизатором. В работе {channel} канал.",
+        "pssON": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time} с включенным системным стабилизатором. В работе {channel} канал.",
+
+        "pss OFF": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time} с отключенным системным стабилизатором. В работе {channel} канал.",
+        "pssOFF": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time} с отключенным системным стабилизатором. В работе {channel} канал.",
+
         "Разгрузка по Q": "",
+        "Q to 0": "",
         "V-Hz": "",
         "cosPhi=1": "",
-        "pss OFF": "",
-        "pssOFF": "",
-        "Q to 0": "",
-        "ОМВ": "",
-        "ОПР": "",
+
+        "ОПР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя перегрузки по току ротора при сниженной уставке {tunes}. В работе {channel} канал.",
         "ОПВ": "",
         "ОПС": "",
-        "ОМТР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока ротора при сниженной уставке {tunes}. В работе {channel} канал",
         
-        "ОМТВВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока возбуждения возбудителя при сниженной уставке {tunes}. В работе {channel} канал",
+        "ОМВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя минимального возбуждения при скачкообразном уменьшении уставки {key_parameter} на {pulse}{pulse_time}. В работе {channel} канал.",
 
-        "ОМНР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального напряжения ротора при сниженной уставке {tunes}. В работе {channel} канал",
+        "ОМТР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока ротора при сниженной уставке {tunes}. В работе {channel} канал.",
 
-        "LimCos": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля cosPhi при сниженной уставке {tunes}. В работе {channel} канал",
+        "ОМТВВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального тока возбуждения возбудителя при сниженной уставке {tunes}. В работе {channel} канал.",
+
+        "ОМНР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального напряжения ротора при сниженной уставке {tunes}. В работе {channel} канал.",
+
+        "LimCos": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля cosPhi при сниженной уставке {tunes}. В работе {channel} канал.",
 
         "": ""
 
