--- a/standard_settings.json
+++ b/standard_settings.json
@@ -101,14 +101,17 @@
                 "Ug":"",
                 "Ie":"SetIe",
                 "If":"",
-                "Uf":""
+                "Uf":"",
+                "Usyn":""
+
                 
             }],
             "/": [{
                 "Ug":"SetUg",
                 "Ie":"",
                 "If":"",
-                "Uf":""
+                "Uf":"",
+                "Usyn":""
                 
             }]
         },
@@ -197,6 +200,8 @@
                 "ECR",
                 "Qg",
                 "CosPhi"
+
+
     ],
 
     "test":[
@@ -209,6 +214,7 @@
         "гашение",
         "Разгрузка по Q",
         "Q to 0",
+        "Неуспешное НВ",
         "НВ",
         "HB",
         "pss ON",
@@ -224,6 +230,7 @@
         "ОМТР",
         "ОМТВВ",
         "ОМНР",
+        "Usyn",
         "LimCos"
     ],
 
@@ -232,6 +239,9 @@
         "AVR" : "в режиме автоматического регулирования",
         "CosPhi" : "в режиме регулирования CosPhi",
         "Qg" : "в режиме регулирования CosPhi",
+
+        "Рабочая-Резервная": "перехода с рабочей системы на резервную",
+        "Резервная-Рабочая": "перехода с резервной системы на рабочую",
 
         "ECR1-ECR2": "перехода ECR1 - ECR2",
         "ECR2-ECR1": "перехода ECR2 - ECR1",
@@ -263,6 +273,9 @@
         "CosPhi2-AVR2": "перехода CosPhi2 - AVR2",
         "ECR2-CosPhi2": "перехода ECR2 - CosPhi2",
         "CosPhi2-ECR2": "перехода CosPhi2 - ECR2",
+
+        "Рабочая - Резервная": "перехода с рабочей системы на резервную",
+        "Резервная - Рабочая": "перехода с резервной системы на рабочую",
 
         "ECR1 - ECR2": "перехода ECR1 - ECR2",
         "ECR2 - ECR1": "перехода ECR2 - ECR1",
@@ -299,6 +312,8 @@
 
         "Форсировк": "Осциллограмма параметров системы возбуждения в процессе форсировки {regulator}. В работе {channel} канал.", 
 
+        "Неуспешное НВ": "Осциллограмма параметров системы возбуждения в процессе неуспешного начального возбуждения {source} {regulator}. В работе {channel} канал.",
+
         "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {regulator}. В работе {channel} канал.",
 
         "переходы": "Осциллограмма параметров системы возбуждения в процессе {regulator}.",
@@ -320,12 +335,13 @@
 
         "Разгрузка по Q": "",
         "Q to 0": "",
-        "V-Hz": "",
         "cosPhi=1": "",
-
-        "ОПР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя перегрузки по току ротора при сниженной уставке {tunes}. В работе {channel} канал.",
         "ОПВ": "",
         "ОПС": "",
+
+        "V-Hz": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя V/Hz при уменьшении частоты вращения турбины. В работе {channel} канал.",
+
+        "ОПР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя перегрузки по току ротора при сниженной уставке {tunes}. В работе {channel} канал.",
         
         "ОМВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя минимального возбуждения при скачкообразном уменьшении уставки {key_parameter} на {pulse}{pulse_time}. В работе {channel} канал.",
 
@@ -336,6 +352,8 @@
         "ОМНР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя максимального напряжения ротора при сниженной уставке {tunes}. В работе {channel} канал.",
 
         "LimCos": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля cosPhi при сниженной уставке {tunes}. В работе {channel} канал.",
+
+        "Usyn": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля Usyn при сниженной уставке {tunes}. В работе {channel} канал.",
 
         "": ""
 
