Доработка начального возбуждения. Добавлен выбор источника.

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -96,6 +96,14 @@
                 
             }]
         },
+        "Неуспешное НВ":{
+            "/": [{
+                "Ug":"SetUg",
+                "Uf":"",
+                "Usyn":""
+                
+            }]
+        },
         "НВ":{
             "ECR": [{
                 "Ug":"",
@@ -314,7 +322,7 @@
 
         "Неуспешное НВ": "Осциллограмма параметров системы возбуждения в процессе неуспешного начального возбуждения {source} {regulator}. В работе {channel} канал.",
 
-        "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {regulator}. В работе {channel} канал.",
+        "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {source} {regulator}. В работе {channel} канал.",
 
         "переходы": "Осциллограмма параметров системы возбуждения в процессе {regulator}.",
 
