Добавлено конвертирование comtrade => csv

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -140,19 +140,37 @@
             }]
         },
         "Ограничители": {
+            "Usyn": [{
+                "Ug":"",
+                "Ie":"SetIe",
+                "If":"",
+                "Uf":"",
+                "Usyn":""
+                
+            }],
+            "V-Hz": [{
+                "Ug":"SetUg",
+                "Ie":"",
+                "If":"",
+                "Uf":"",
+                "Fg":"",
+                "Usyn":""
+                
+            }],
             "/": [{
                 "Ug":"SetUg",
                 "Ie":"",
                 "If":"",
-                "Uf":""
-                
+                "Uf":"",
+                "Usyn":""
             }]
         },
         "/": [{
             "Ug":"SetUg",
             "Ie":"",
             "If":"",
-            "Uf":""
+            "Uf":"",
+            "Usyn":""
             
         }]
 	},
