Добработка подписей, удаление лишних пробелов в названии графиков

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -226,8 +226,6 @@
                 "ECR",
                 "Qg",
                 "CosPhi"
-
-
     ],
 
     "test":[
@@ -266,75 +264,20 @@
         "CosPhi" : "в режиме регулирования CosPhi",
         "Qg" : "в режиме регулирования CosPhi",
 
-        "Рабочая-Резервная": "перехода с рабочей системы на резервную",
-        "Резервная-Рабочая": "перехода с резервной системы на рабочую",
+        "Рабочая-Резервная": "с рабочей системы на резервную",
+        "Резервная-Рабочая": "с резервной системы на рабочую",
+        "Рабочая - Резервная": "с рабочей системы на резервную",
+        "Резервная - Рабочая": "с резервной системы на рабочую",
+        "loss Ug": "при потере напряжения генератора",
+        "loss UgA": "при потере фазы A напряжения генератора",
+        "loss Usyn": "при потере напряжения синхронизации",
+        "loss UsynC": "при потере фазы C напряжения синхронизации",
+        "loss UsynA": "при потере фазы A напряжения синхронизации",
+        "loss Power": "при потере питания канала",
+        "loss RC": "при срабатывании контроля RC цепей",
+        "loss imp": "при потере импульса управления тиристором",
 
-        "ECR1-ECR2": "перехода ECR1 - ECR2",
-        "ECR2-ECR1": "перехода ECR2 - ECR1",
-        "AVR1-AVR2": "перехода AVR1 - AVR2",
-        "AVR2-AVR1": "перехода AVR2 - AVR1",
-
-        "AVR1-ECR1": "перехода AVR1 - ECR1",
-        "ECR1-AVR1": "перехода ECR1 - AVR1",
-        "AVR1-Qg1": "перехода AVR1 - Qg1",
-        "Qg1-AVR1": "перехода Qg1 - AVR1",
-        "ECR1-Qg1": "перехода ECR1 - Qg1",
-        "Qg1-ECR1": "перехода Qg1 - ECR1",
-        "CosPhi1-Qg1": "перехода CosPhi1 - Qg1",
-        "Qg1-CosPhi1": "перехода Qg1 - CosPhi1",
-        "AVR1-CosPhi1": "перехода AVR1 - CosPhi1",
-        "CosPhi1-AVR1": "перехода CosPhi1 - AVR1",
-        "ECR1-CosPhi1": "перехода ECR1 - CosPhi1",
-        "CosPhi1-ECR1": "перехода CosPhi1 - ECR1",
-
-        "AVR2-ECR2": "перехода AVR2 - ECR2",
-        "ECR2-AVR2": "перехода ECR2 - AVR2",
-        "AVR2-Qg2": "перехода AVR2 - Qg2",
-        "Qg2-AVR2": "перехода Qg2 - AVR2",
-        "ECR2-Qg2": "перехода ECR2 - Qg2",
-        "Qg2-ECR2": "перехода Qg2 - ECR2",
-        "CosPhi2-Qg2": "перехода CosPhi2 - Qg2",
-        "Qg2-CosPhi2": "перехода Qg2 - CosPhi2",
-        "AVR2-CosPhi2": "перехода AVR2 - CosPhi2",
-        "CosPhi2-AVR2": "перехода CosPhi2 - AVR2",
-        "ECR2-CosPhi2": "перехода ECR2 - CosPhi2",
-        "CosPhi2-ECR2": "перехода CosPhi2 - ECR2",
-
-        "Рабочая - Резервная": "перехода с рабочей системы на резервную",
-        "Резервная - Рабочая": "перехода с резервной системы на рабочую",
-
-        "ECR1 - ECR2": "перехода ECR1 - ECR2",
-        "ECR2 - ECR1": "перехода ECR2 - ECR1",
-        "AVR1 - AVR2": "перехода AVR1 - AVR2",
-        "AVR2 - AVR1": "перехода AVR2 - AVR1",
-
-        "AVR1 - ECR1": "перехода AVR1 - ECR1",
-        "ECR1 - AVR1": "перехода ECR1 - AVR1",
-        "AVR1 - Qg1": "перехода AVR1 - Qg1",
-        "Qg1 - AVR1": "перехода Qg1 - AVR1",
-        "ECR1 - Qg1": "перехода ECR1 - Qg1",
-        "Qg1 - ECR1": "перехода Qg1 - ECR1",
-        "CosPhi1 - Qg1": "перехода CosPhi1 - Qg1",
-        "Qg1  -CosPhi1": "перехода Qg1 - CosPhi1",
-        "AVR1 - CosPhi1": "перехода AVR1 - CosPhi1",
-        "CosPhi1 - AVR1": "перехода CosPhi1 - AVR1",
-        "ECR1 - CosPhi1": "перехода ECR1 - CosPhi1",
-        "CosPhi1 - ECR1": "перехода CosPhi1 - ECR1",
-
-        "AVR2 - ECR2": "перехода AVR2 - ECR2",
-        "ECR2 - AVR2": "перехода ECR2 - AVR2",
-        "AVR2 - Qg2": "перехода AVR2 - Qg2",
-        "Qg2 - AVR2": "перехода Qg2 - AVR2",
-        "ECR2 - Qg2": "перехода ECR2 - Qg2",
-        "Qg2 - ECR2": "перехода Qg2 - ECR2",
-        "CosPhi2 - Qg2": "перехода CosPhi2 - Qg2",
-        "Qg2 - CosPhi2": "перехода Qg2 - CosPhi2",
-        "AVR2 - CosPhi2": "перехода AVR2 - CosPhi2",
-        "CosPhi2 - AVR2": "перехода CosPhi2 - AVR2",
-        "ECR2 - CosPhi2": "перехода ECR2 - CosPhi2",
-        "CosPhi2 - ECR2": "перехода CosPhi2 - ECR2",
-
-        "Проверка устойчивости": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time}. В работе {channel} канал.",
+        "Проверка устойчивости": "Осциллограмма параметров системы возбуждения в процессе скачкообразного увеличения уставки {key_parameter} на {pulse}{pulse_time}{tunes}. В работе {channel} канал.",
 
         "Форсировк": "Осциллограмма параметров системы возбуждения в процессе форсировки {regulator}. В работе {channel} канал.", 
 
@@ -342,7 +285,7 @@
 
         "НВ": "Осциллограмма параметров системы возбуждения в процессе начального возбуждения {source} {regulator}. В работе {channel} канал.",
 
-        "переходы": "Осциллограмма параметров системы возбуждения в процессе {regulator}.",
+        "переходы": "Осциллограмма параметров системы возбуждения в процессе перехода {regulator}{replace}.",
 
         "первое включение в сеть":"Осциллограмма параметров системы возбуждения в процессе первого включения в сеть {regulator}. В работе {channel} канал.",
 
@@ -368,6 +311,8 @@
         "V-Hz": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя V/Hz при уменьшении частоты вращения турбины. В работе {channel} канал.",
 
         "ОПР": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя перегрузки по току ротора при сниженной уставке {tunes}. В работе {channel} канал.",
+
+        "ОПС": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя перегрузки по току статора с параметрами {tunes}. В работе {channel} канал.",
         
         "ОМВ": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничителя минимального возбуждения при скачкообразном уменьшении уставки {key_parameter} на {pulse}{pulse_time}. В работе {channel} канал.",
 
@@ -379,7 +324,7 @@
 
         "LimCos": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля cosPhi при сниженной уставке {tunes}. В работе {channel} канал.",
 
-        "Usyn": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля Usyn при сниженной уставке {tunes}. В работе {channel} канал.",
+        "Usyn": "Осциллограмма параметров системы возбуждения в процессе срабатывания ограничитля Usyn при сниженной уставке {tunes} {regulator}. В работе {channel} канал.",
 
         "": ""
 
