yAvr добавлен везде или почти везде:)

--- a/standard_settings.json
+++ b/standard_settings.json
@@ -8,7 +8,8 @@
                     "Uf":"",
                     "If":"",
                     "Pg":"",
-                    "Qg":""
+                    "Qg":"",
+                    "yAvr":""
                     
             }],
             "/": [{
@@ -18,7 +19,8 @@
                     "If":"",
                     "Uf":"",
                     "Pg":"",
-                    "Qg":""
+                    "Qg":"",
+                    "yAvr":""
                     
             }]
         },
@@ -30,7 +32,8 @@
                 "If":"",
                 "Uf":"",
                 "Pg":"",
-                "Qg":""
+                "Qg":"",
+                "yAvr":""
                 
             }]
         },
@@ -43,7 +46,8 @@
                 "Pg":"",
                 "Qg":"",
                 "Ie":"",
-                "Uf":""
+                "Uf":"",
+                "yAvr":""
                 
             }],
             "ОПВ": [{
@@ -54,7 +58,8 @@
                 "Ig":"",
                 "Pg":"",
                 "Qg":"",
-                "Uf":""
+                "Uf":"",
+                "yAvr":""
                 
             }],
 			"/": [{
@@ -64,7 +69,8 @@
                 "Uf":"",
                 "Ig":"",
                 "Pg":"",
-                "Qg":""
+                "Qg":"",
+                "yAvr":""
             }]
         },
         "/": [{
@@ -74,7 +80,8 @@
             "Pg":"",
             "Qg":"",
             "Ie":"",
-            "Uf":""
+            "Uf":"",
+            "yAvr":""
             
         }]
     },
@@ -128,14 +135,16 @@
                 "Ug":"",
                 "Ie":"SetIe",
                 "If":"",
-                "Uf":""
+                "Uf":"",
+                "yAvr":""
                 
             }],
             "/": [{
                 "Ug":"SetUg",
                 "Ie":"",
                 "If":"",
-                "Uf":""
+                "Uf":"",
+                "yAvr":""
                 
             }]
         },
@@ -165,6 +174,29 @@
                 "Usyn":""
             }]
         },
+        "Переходы": {
+            "loss imp": [{
+                "Ug":"SetUg",
+                "Ie":"",
+                "If":"",
+                "udJump":"",
+                "ud-usyn_Before":"",
+                "ud-usyn_After":"",
+                "Uf":"",
+                "Usyn":"",
+                "yAvr":""
+                
+            }],
+            "/": [{
+                "Ug":"SetUg",
+                "Ie":"",
+                "If":"",
+                "Uf":"",
+                "Usyn":"",
+                "yAvr":""
+            }]
+        },
+
         "/": [{
             "Ug":"SetUg",
             "Ie":"",
@@ -214,7 +246,8 @@
         "Qg":"",
         "Ie":"",
         "If":"",
-        "Uf":""
+        "Uf":"",
+        "yAvr":""
         
     }],
 
